Lower the Next button on registration/sponsorship to fix overlap with radios

--- a/sites/all/themes/custom/badcamp2016/scss/components/_forms.scss
+++ b/sites/all/themes/custom/badcamp2016/scss/components/_forms.scss
@@ -30,7 +30,7 @@ label, .form-required {
   .form-actions.form-wrapper {
     margin-top: 4em;
     @include breakpoint(medium) {
-      margin-top: 1em;
+      margin-top: 3.5em;
     }
   }
 }
